systemd System and Service Manager

   systemd (214.10-dev)
~~~~~~~
 * core:
 	- struct Manager:
 		• remove “kdbus_fd” field;
 	- remove initramfs support;
 * libsystemd:
 	- struct sd_bus:
 		• remove “machine” field;
 		• remove “kernel” field;
 		• remove “use_memfd” field;
 		• remove “memfd_cache_mutex” field;
 		• remove “memfd_cache” field;
 		• remove “n_memfd_cache” field;
 		• remove “kdbus_buffer” field;
 		• remove “fake_creds” field;
 		• remove “attach_flags” field;
 		• add “is_monitor” field;
 		• add “accept_fd” field;
 		• remove “is_kernel” field;
 	- struct bus_body_part:
 		• remove “memfd” field;
 	- struct sd_bus_message:
 		• remove “release_kdbus” field;
 		• remove “free_kdbus” field;
 		• remove “kdbus” field;
 		• remove “monotonic” field;
 		• remove “realtime” field;
 		• remove “seqnum” field;
 		• remove “priority” field;
 	- remove functions:
 		• bus_message_map_properties_changed;
 		• sd_bus_open_system_container;
 		• bus_event_loop_with_idle;
 		• sd_bus_try_close;
 		• bus_remove_match_internal_kernel;
 		• bus_add_match_internal_kernel;
 		• sd_bus_message_get_realtime_usec;
 		• sd_bus_message_get_seqnum;
 		• sd_bus_message_get_monotonic_usec;
 		• sd_bus_message_set_priority;
 		• sd_bus_message_get_priority;
 		• sd_bus_get_owner_machine_id;
 		• sd_bus_negotiate_timestamp;
 	- remove “BusTransport” enum;
 	- allow naming event sources;
 	- use event source name rather than address in debug messages;
 	- name event sources used in libraries;
 	- remove “bus-bloom” module;
 * logind:
 	- remove “GetSessionByPID” dbus method;
 	- remove “GetUserByPID” dbus method;
 * loginctl:
 	- remove “machine” argument option;
 * systemd-analyze:
 	- remove “machine” argument option;
 * systemd-run:
 	- remove “machine” argument option;
 * kdbus:
 	- remove “sd-resolve” module;
 	- remove “sd-utf8” module;
 	- remove “bus-container” module;
 	- remove “bus-kernel” module;
 	- remove PORTING-DBUS1 file;
 	- remove kdbus.h header file;